16/4/13
NEW Relics:Phantom of Cronus and Hermes Travel Clothing
NEW Item:Teleport Pearl,it won't be consumed if you wear the Hermes Travel Clothing.
NEW PotionEffect:Residual Pain

16/4/10
New Relics:Aphrodite's Grace and Athena's Bless
New Achievements.

16/4/9
Add the way to unlock Extra Knowledge
New Potion Effects: Fast Particle Sorting and Slow Particle Sorting
A New Relic: Maxwell's Demon
Sorted CreativeTab

16/4/8
Add new Relics.(WIP)
Add Artifaconia
Add D20

16/4/3
Add 3 types of Lycorisradiata.

16/4/2
Blue Enchantress will no longer consume water
Add new knowledge type
Add recipes for flowers
Add recipes for Blank Card
Update zh_CN.lang
Update en_US.lang

16/4/1
Add Sunshine Lily and Moonlight Lily.
First clean up.